<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="welcome_back">Welcome back.</string>
    <string name="new_to_transferwise">New to TransferWise?</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Log In</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="login_options">Or log in with</string>
    <string name="remember_this_device">Remember this device</string>
    <string name="terms_policy">By continuing you accept our <![CDATA[<a href="https://api-docs.transferwise.com/">Terms of use</a>]]> and <![CDATA[<a href="https://api-docs.transferwise.com/">Privacy Policy</a>]]></string>
    <string name="we_just_sent_you_an_sms">We just sent you an SMS</string>
    <string name="verification_message">To log in, enter the security code we sent to</string>
    <string name="learn_more"><u>Learn more</u></string>
    <string name="type_digit">Type your 6-digit security code here:</string>
    <string name="done">Done</string>
    <string name="did_not_receive_code"><u>I didn\'t receive a code</u></string>
    <string name="credentials_error">Sorry, that email or password didn\'t work.</string>
</resources>