<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/linearLoginWrapper"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transferWiseWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLogin"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/transferWiseWhite"
        app:contentInsetStartWithNavigation="0dp">

        <include
            android:id="@+id/layoutLoginToolbar"
            layout="@layout/login_toolbar" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/loginScrollWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearScrollWrapper"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:layout_marginTop="90dp">

            <include
                android:id="@+id/layoutCredentialsError"
                android:layout_height="40dp"
                android:layout_width="match_parent"
                layout="@layout/complete_credentials_layout"
                android:layout_marginBottom="20dp"
                android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textWelcomeBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="27sp"
                android:textStyle="bold"
                android:fontFamily="@font/tw_averta_bold"
                android:textColor="@color/transferWiseBlackBlue"
                android:text="@string/welcome_back"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:id="@+id/linearHeaderSubtitleWrapper"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="17dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textNewToTransferWise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="@color/transferWiseGrey61"
                    android:fontFamily="@font/tw_averta_semibold"
                    android:text="@string/new_to_transferwise"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="@color/transferWiseBlue"
                    android:fontFamily="@font/tw_averta_semibold"
                    android:text="@string/sign_up"
                    android:layout_marginStart="5dp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textSize="17sp"
                android:gravity="center_vertical"
                android:textColor="@color/transferWiseBlackBlue"
                android:hint="@string/email_hint"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:fontFamily="@font/tw_averta_semibold"
                android:layout_marginTop="50dp"
                android:background="@drawable/edit_text_border_bg"/>

            <RelativeLayout
                android:id="@+id/relativeInputPasswordWrapper"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_border_bg"
                android:layout_marginTop="25dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editPassword"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="17sp"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:textColor="@color/transferWiseBlackBlue"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:fontFamily="@font/tw_averta_semibold"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/imageShowHidePassword"
                    android:background="@android:color/transparent"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageShowHidePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_show"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLoginButtonWrapper"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="25dp"
                android:background="@color/transferWiseBlue">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageLock"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_lock"
                    android:layout_marginStart="20dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:textColor="@color/transferWiseWhite"
                    android:gravity="center"
                    android:fontFamily="@font/tw_averta_regular"
                    android:text="@string/login_button_text"
                    android:textAllCaps="false"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:background="@android:color/transparent"/>

                <ProgressBar
                    android:id="@+id/progressIndicator"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:indeterminateDrawable="@drawable/custom_progress_bar"
                    android:indeterminateDuration="500"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="7dp"
                    android:visibility="gone"/>
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/transferWiseBlue"
                android:textSize="15sp"
                android:fontFamily="@font/tw_averta_semibold"
                android:text="@string/forgot_password"
                android:layout_marginTop="25dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textLoginOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textColor="@color/transferWiseGrey61"
                android:textSize="15sp"
                android:fontFamily="@font/tw_averta_semibold"
                android:text="@string/login_options"
                android:layout_marginTop="25dp"/>

            <LinearLayout
                android:id="@+id/linearLoginOptionsWrapper"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/buttonFacebook"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="52dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:srcCompat="@drawable/ic_facebook_logo"
                    android:background="@drawable/facebook_button_border" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/buttonGoogle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="52dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_google_logo"
                    android:background="@drawable/google_button_border"
                    android:layout_marginRight="17dp"
                    android:layout_marginLeft="17dp"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/buttonApple"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="52dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_apple_logo"
                    android:background="@drawable/apple_button_border"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/transferWiseWhiteGrey"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tw_averta_semibold"
                android:textColor="@color/transferWiseBlackBlue"
                android:text="@string/remember_this_device"
                android:button="@drawable/checkbox_bg"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:layout_marginTop="23dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/transferWiseWhiteGrey"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textTermsPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/transferWiseGrey61"
                android:textSize="15sp"
                android:fontFamily="@font/tw_averta_semibold"
                tools:text="@string/terms_policy"
                android:layout_marginTop="30dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>