<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/linearVerificationWrapper"
    android:orientation="vertical"
    android:background="@color/transferWiseWhite"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarVerification"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/transferWiseWhite"
        app:contentInsetStartWithNavigation="0dp">

        <include
            android:id="@+id/layoutLoginToolbar"
            layout="@layout/login_toolbar" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollVerification"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearScrollWrapper"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:paddingLeft="13dp"
            android:paddingRight="13dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageVerificationIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_transferwise_small_logo"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textSentSMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="27sp"
                android:textStyle="bold"
                android:fontFamily="@font/tw_averta_bold"
                android:textColor="@color/transferWiseBlackBlue"
                android:text="@string/we_just_sent_you_an_sms"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="25dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textVerificationMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/transferWiseGrey61"
                android:fontFamily="@font/tw_averta_semibold"
                android:text="@string/verification_message"
                android:layout_marginTop="17dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/transferWiseBlackBlue"
                android:fontFamily="@font/tw_averta_semibold"
                tools:text="*********7139"
                android:layout_marginTop="3dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textLearnMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/transferWiseBlue"
                android:fontFamily="@font/tw_averta_semibold"
                android:text="@string/learn_more"
                android:layout_marginTop="5dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textTypeDigit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/transferWiseViking"
                android:fontFamily="@font/tw_averta_bold"
                android:text="@string/type_digit"
                android:layout_marginTop="30dp"/>

            <LinearLayout
                android:id="@+id/linearDigitSpaceWrapper"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit1"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:focusable="true"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/transferWiseBlackBlue"
                    android:fontFamily="@font/tw_averta_semibold"
                    android:background="@drawable/edit_text_border_bg"
                    android:layout_marginTop="10dp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit2"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:focusable="true"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/transferWiseBlackBlue"
                    android:fontFamily="@font/tw_averta_semibold"
                    android:background="@drawable/edit_text_border_bg"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit3"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:focusable="true"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/transferWiseBlackBlue"
                    android:fontFamily="@font/tw_averta_semibold"
                    android:background="@drawable/edit_text_border_bg"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit4"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:focusable="true"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/transferWiseBlackBlue"
                    android:fontFamily="@font/tw_averta_semibold"
                    android:background="@drawable/edit_text_border_bg"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit5"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:focusable="true"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/transferWiseBlackBlue"
                    android:fontFamily="@font/tw_averta_semibold"
                    android:background="@drawable/edit_text_border_bg"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit6"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:focusable="true"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/transferWiseBlackBlue"
                    android:fontFamily="@font/tw_averta_semibold"
                    android:background="@drawable/edit_text_border_bg"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relativeDoneButtonWrapper"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="25dp"
                android:background="@color/transferWiseBlue">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageLock"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_lock"
                    android:layout_marginStart="20dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonDone"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:textColor="@color/transferWiseWhite"
                    android:gravity="center"
                    android:fontFamily="@font/tw_averta_regular"
                    android:text="@string/done"
                    android:textAllCaps="false"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:background="@android:color/transparent"/>

                <ProgressBar
                    android:id="@+id/progressIndicator"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:indeterminateDrawable="@drawable/custom_progress_bar"
                    android:indeterminateDuration="500"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="7dp"
                    android:visibility="gone"/>
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textDidNotReceiveCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/transferWiseBlue"
                android:fontFamily="@font/tw_averta_semibold"
                android:text="@string/did_not_receive_code"
                android:layout_marginTop="29dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>